--- a/demo_segments.html
+++ b/demo_segments.html
@@ -26,7 +26,7 @@
 <div id="map"></div>
 
 <div class="legend">
-  <div class="title">Speed GPS (km/h)</div>
+  <div class="title">Speed (km/h)</div>
   <div class="row"><span class="swatch" style="background:#4575b4;"></span><span>0–10</span></div>
   <div class="row"><span class="swatch" style="background:#91bfdb;"></span><span>10–20</span></div>
   <div class="row"><span class="swatch" style="background:#e0f3f8;"></span><span>20–25</span></div>
@@ -42,7 +42,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoidG9tdmFuYXJtYW4iLCJhIjoiRDlFeWFVdyJ9.B6ZgpP0C
 
 const map = new mapboxgl.Map({
   container: 'map',
-  style: 'mapbox://styles/tomvanarman/cmex2zt37009i01sb94ddabw4',
+  style: 'mapbox://styles/tomvanarman/cmdlugpsh003401s93pou1z8m',
   center: [4.895, 52.37],
   zoom: 12
 });
